--- a/tests/Microsoft.Xaml.Behaviors.UnitTests/Microsoft.Xaml.Behaviors.UnitTests.csproj
+++ b/tests/Microsoft.Xaml.Behaviors.UnitTests/Microsoft.Xaml.Behaviors.UnitTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{76E3CE29-A9BC-4417-8224-CE18C6FE51B4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTests</RootNamespace>
-    <AssemblyName>UnitTests</AssemblyName>
+    <RootNamespace>Microsoft.Xaml.Behaviors.UnitTests</RootNamespace>
+    <AssemblyName>Microsoft.Xaml.Behaviors.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
