Upgrade DesignTools to target 4.7.2 as VS16.3 now requires. Added DesignTools to netcoreapp3.0 folder as well

--- a/src/Microsoft.Xaml.Behaviors/Microsoft.Xaml.Behaviors.csproj
+++ b/src/Microsoft.Xaml.Behaviors/Microsoft.Xaml.Behaviors.csproj
@@ -86,8 +86,10 @@
   </ItemGroup>
 
   <ItemGroup Label="Package">
-    <None Include="bin\Release\net45\Microsoft.Xaml.Behaviors.DesignTools.dll" PackagePath="lib\net45" Pack="true" />
-    <None Include="bin\Release\net45\Microsoft.Xaml.Behaviors.DesignTools.pdb" PackagePath="lib\net45" Pack="true" />
+    <None Include="bin\$(Configuration)\net45\Microsoft.Xaml.Behaviors.DesignTools.dll" PackagePath="lib\net45\Design" Pack="true" />
+    <None Include="bin\$(Configuration)\net45\Microsoft.Xaml.Behaviors.DesignTools.pdb" PackagePath="lib\net45\Design" Pack="true" />
+    <None Include="bin\$(Configuration)\net45\Microsoft.Xaml.Behaviors.DesignTools.dll" PackagePath="lib\netcoreapp3.0\Design" Pack="true" />
+    <None Include="bin\$(Configuration)\net45\Microsoft.Xaml.Behaviors.DesignTools.pdb" PackagePath="lib\netcoreapp3.0\Design" Pack="true" />
   </ItemGroup>
   <ItemGroup>
     <None Include="FinalPublicKey.snk" />
