--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,20 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
-    - uses: nuget/setup-nuget@v1.0.2
+    - uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.100
+    - uses: nuget/setup-nuget@v1.0.5
     - name: Restore
       run: nuget restore src/BehaviorsSdk.sln
-    - uses: microsoft/setup-msbuild@v1.0.1
+    - uses: microsoft/setup-msbuild@v1.0.2
     - name: Build
       run: msbuild src/BehaviorsSdk.sln /p:Configuration=Release
+    - name: Pack Behaviors
+      if: success()
+      run: msbuild src/Microsoft.Xaml.Behaviors/Microsoft.Xaml.Behaviors.csproj /p:Configuration=Release -t:pack
+    - name: Upload NuGet Artifacts
+      if: success()
+      uses: actions/upload-artifact@v2
+      with:
+        path: src/Microsoft.Xaml.Behaviors/bin/Release/*.nupkg
