Remove wildcard in signing targets file

--- a/src/Microsoft.Xaml.Behaviors.Signing.targets
+++ b/src/Microsoft.Xaml.Behaviors.Signing.targets
@@ -15,7 +15,11 @@
       <Authenticode>Microsoft400</Authenticode>
       <StrongName>StrongName</StrongName>
     </FilesToSign>
-    <FilesToSign Include="$(OutputPath)Design\*.dll">
+    <FilesToSign Include="$(OutputPath)Design\$(AssemblyName).Design.dll">
+      <Authenticode>Microsoft400</Authenticode>
+      <StrongName>StrongName</StrongName>
+    </FilesToSign>
+    <FilesToSign Include="$(OutputPath)Design\$(AssemblyName).DesignTools.dll">
       <Authenticode>Microsoft400</Authenticode>
       <StrongName>StrongName</StrongName>
     </FilesToSign>
