--- a/src/Microsoft.Xaml.Behaviors.DesignTools/packages.config
+++ b/src/Microsoft.Xaml.Behaviors.DesignTools/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.VisualStudio.DesignTools.Extensibility" version="16.10.31320.204" targetFramework="net472" />
+  <package id="Microsoft.VisualStudioEng.MicroBuild.Core" version="0.4.1" targetFramework="net472" developmentDependency="true" />
 </packages>
