set working directory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   managed-build:
     runs-on: windows-latest
+    defaults:
+      run:
+        working-directory: src
+
     steps:
     - uses: actions/checkout@v3
       with:
