Update azure-pipelines/build.yml to specify main instead of master

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -19,7 +19,7 @@ variables:
 trigger:
   branches:
     include:
-    - refs/heads/master
+    - refs/heads/main
 resources:
   repositories:
   - repository: MicroBuildTemplate
