Temporarily use 'test' signing

--- a/azure-pipelines/build.yml
+++ b/azure-pipelines/build.yml
@@ -9,7 +9,7 @@ variables:
   value: true
 - name: SignType
   ${{ if ne( variables['Build.Reason'], 'PullRequest' ) }}:
-    value: real
+    value: test
   ${{ else }}:
     value: test
 - name: TeamName
