Strong-name fixes
* Stop strong-naming the Microsoft.Xaml.Behaviors.dll using the
  Behaviors.snk. The released NuGets always use FinalPublicKey.snk,
  so make sure to use that always.
* Renamed src/Behaviors.snk to Tests/UnitTests.snk so it's less confusing
* Updated UnitTests.csproj to use the newly named UnitTests.snk
* Removed properties that only affected UnitTests.csproj from the
  Directory.Build.props

--- a/Test/UnitTests/UnitTests.csproj
+++ b/Test/UnitTests/UnitTests.csproj
@@ -6,6 +6,8 @@
     <OutputType>Library</OutputType>
     <AssemblyName>UnitTests</AssemblyName>
     <RootNamespace>UnitTests</RootNamespace>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\UnitTests.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
